# Matrix_project

./: CMakeLists.txt  Matrix.h  MatrixDoubleFactory.cpp  MatrixDoubleFactory.h  MatrixException.cpp  MatrixException.h  MatrixIntFactory.cpp  MatrixIntFactory.h  main.cpp
test/: CMakeLists.txt  MatrixTest.cpp
